fixed spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,7 +82,7 @@ a.nav-item:hover {
 	max-width: 256px;
 }
 #clip_top{
-    margin-top: -65px;
+    margin-top: -85px;
 }
 
 .project-text {
